# demotivate

./: LICENSE  README.md  demotivate.py  pyproject.toml
